// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectEffects component should render correctly when visible 1`] = `
preact-render-spy (1 nodes)
-------
<div
  class="effects visible"
  style="width: calc(undefinedpx + 14rem);"
>
  <div class="list">
    <label
      class="effectToggle"
      aria-label="Effect 1, value 1, active"
      aria-live={true}
    >
      <input
        type="checkbox"
        value="1"
        onClick={[Function onClick]}
        checked={true}
        class="effectInput"
       />
      <span class="effectFocusIndicator"></span>
      <span class="effectIndicator active"></span>
      <span class="effectName">Effect 1</span>
      <span class="effectValue">1</span>
    </label>
    <label
      class="effectToggle"
      aria-label="Effect 2, value 3, inactive"
      aria-live={true}
    >
      <input
        type="checkbox"
        value="2"
        onClick={[Function onClick]}
        checked={false}
        class="effectInput"
       />
      <span class="effectFocusIndicator"></span>
      <span class="effectIndicator"></span>
      <span class="effectName">Effect 2</span>
      <span class="effectValue">3</span>
    </label>
  </div>
  <div
    class="editButton"
    style="margin-left: calc(undefinedpx + 2rem);"
  >
    edit stat...
  </div>
</div>

`;

exports[`SelectEffects component should render correctly with no optional props 1`] = `
preact-render-spy (1 nodes)
-------
<div
  class="effects"
  style="width: 0px;"
>
  <div class="list">
    <label
      class="effectToggle"
      aria-label="Effect 1, value 1, active"
      aria-live={true}
    >
      <input
        type="checkbox"
        value="1"
        onClick={[Function onClick]}
        checked={true}
        class="effectInput"
       />
      <span class="effectFocusIndicator"></span>
      <span class="effectIndicator active"></span>
      <span class="effectName">Effect 1</span>
      <span class="effectValue">1</span>
    </label>
    <label
      class="effectToggle"
      aria-label="Effect 2, value 3, inactive"
      aria-live={true}
    >
      <input
        type="checkbox"
        value="2"
        onClick={[Function onClick]}
        checked={false}
        class="effectInput"
       />
      <span class="effectFocusIndicator"></span>
      <span class="effectIndicator"></span>
      <span class="effectName">Effect 2</span>
      <span class="effectValue">3</span>
    </label>
  </div>
  <div
    class="editButton"
    style="margin-left: calc(undefinedpx + 2rem);"
  >
    edit stat...
  </div>
</div>

`;

exports[`SelectEffects component should render correctly with the left & top props 1`] = `
preact-render-spy (1 nodes)
-------
<div
  class="effects visible left top"
  style="width: calc(undefinedpx + 14rem);"
>
  <div class="list">
    <label
      class="effectToggle"
      aria-label="Effect 1, value 1, active"
      aria-live={true}
    >
      <input
        type="checkbox"
        value="1"
        onClick={[Function onClick]}
        checked={true}
        class="effectInput"
       />
      <span class="effectFocusIndicator"></span>
      <span class="effectIndicator active"></span>
      <span class="effectName">Effect 1</span>
      <span class="effectValue">1</span>
    </label>
    <label
      class="effectToggle"
      aria-label="Effect 2, value 3, inactive"
      aria-live={true}
    >
      <input
        type="checkbox"
        value="2"
        onClick={[Function onClick]}
        checked={false}
        class="effectInput"
       />
      <span class="effectFocusIndicator"></span>
      <span class="effectIndicator"></span>
      <span class="effectName">Effect 2</span>
      <span class="effectValue">3</span>
    </label>
  </div>
  <div
    class="editButton"
    style="margin-right: calc(undefinedpx + 2rem);"
  >
    edit stat...
  </div>
</div>

`;

exports[`SelectEffects component should render correctly with the left prop 1`] = `
preact-render-spy (1 nodes)
-------
<div
  class="effects visible left"
  style="width: calc(undefinedpx + 14rem);"
>
  <div class="list">
    <label
      class="effectToggle"
      aria-label="Effect 1, value 1, active"
      aria-live={true}
    >
      <input
        type="checkbox"
        value="1"
        onClick={[Function onClick]}
        checked={true}
        class="effectInput"
       />
      <span class="effectFocusIndicator"></span>
      <span class="effectIndicator active"></span>
      <span class="effectName">Effect 1</span>
      <span class="effectValue">1</span>
    </label>
    <label
      class="effectToggle"
      aria-label="Effect 2, value 3, inactive"
      aria-live={true}
    >
      <input
        type="checkbox"
        value="2"
        onClick={[Function onClick]}
        checked={false}
        class="effectInput"
       />
      <span class="effectFocusIndicator"></span>
      <span class="effectIndicator"></span>
      <span class="effectName">Effect 2</span>
      <span class="effectValue">3</span>
    </label>
  </div>
  <div
    class="editButton"
    style="margin-right: calc(undefinedpx + 2rem);"
  >
    edit stat...
  </div>
</div>

`;

exports[`SelectEffects component should render correctly with the top prop 1`] = `
preact-render-spy (1 nodes)
-------
<div
  class="effects visible top"
  style="width: calc(undefinedpx + 14rem);"
>
  <div class="list">
    <label
      class="effectToggle"
      aria-label="Effect 1, value 1, active"
      aria-live={true}
    >
      <input
        type="checkbox"
        value="1"
        onClick={[Function onClick]}
        checked={true}
        class="effectInput"
       />
      <span class="effectFocusIndicator"></span>
      <span class="effectIndicator active"></span>
      <span class="effectName">Effect 1</span>
      <span class="effectValue">1</span>
    </label>
    <label
      class="effectToggle"
      aria-label="Effect 2, value 3, inactive"
      aria-live={true}
    >
      <input
        type="checkbox"
        value="2"
        onClick={[Function onClick]}
        checked={false}
        class="effectInput"
       />
      <span class="effectFocusIndicator"></span>
      <span class="effectIndicator"></span>
      <span class="effectName">Effect 2</span>
      <span class="effectValue">3</span>
    </label>
  </div>
  <div
    class="editButton"
    style="margin-left: calc(undefinedpx + 2rem);"
  >
    edit stat...
  </div>
</div>

`;

exports[`SelectEffects component should render with sufficient height to contain all effects when required 1`] = `
preact-render-spy (1 nodes)
-------
<div
  class="effects visible"
  style="width: calc(undefinedpx + 14rem);"
>
  <div class="list">
    <label
      class="effectToggle"
      aria-label="Effect 1, value 1, active"
      aria-live={true}
    >
      <input
        type="checkbox"
        value="1"
        onClick={[Function onClick]}
        checked={true}
        class="effectInput"
       />
      <span class="effectFocusIndicator"></span>
      <span class="effectIndicator active"></span>
      <span class="effectName">Effect 1</span>
      <span class="effectValue">1</span>
    </label>
    <label
      class="effectToggle"
      aria-label="Effect 2, value 3, inactive"
      aria-live={true}
    >
      <input
        type="checkbox"
        value="2"
        onClick={[Function onClick]}
        checked={false}
        class="effectInput"
       />
      <span class="effectFocusIndicator"></span>
      <span class="effectIndicator"></span>
      <span class="effectName">Effect 2</span>
      <span class="effectValue">3</span>
    </label>
  </div>
  <div
    class="editButton"
    style="margin-left: calc(undefinedpx + 2rem);"
  >
    edit stat...
  </div>
</div>

`;
